Add kyverno and keycloak along with kustomizations directory for further manipulation

--- a/zarf.yaml
+++ b/zarf.yaml
@@ -1,6 +1,6 @@
 kind: ZarfPackageConfig
 metadata:
-  name: big-bang-core
+  name: big-bang
   description: "Deploy Big Bang Core"
   version: 1.43.0
   url: https://p1.dso.mil/products/big-bang
@@ -10,26 +10,35 @@ metadata:
 
 components:
   - name: flux
-    required: true
-    import:
-      path: ./flux
+    required: false
+    manifests:
+      - name: flux-installer
+        kustomizations:
+          - https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base/flux?ref=1.43.0
+    images:
+      - registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.22.2
+      - registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.27.0
+      - registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.25.1
+      - registry1.dso.mil/ironbank/fluxcd/source-controller:v0.26.1
 
   - name: big-bang-core
     description: "Git repositories and OCI images used by Big Bang Core"
-    required: true
+    required: false
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/bigbang.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-controlplane.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-operator.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/jaeger.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/kiali.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/cluster-auditor.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/policy.git
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/monitoring.git
+      - https://repo1.dso.mil/platform-one/big-bang/bigbang.git@1.43.0
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-controlplane.git@1.14.3-bb.4
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-operator.git@1.14.3-bb.0
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/jaeger.git@2.35.0-bb.1
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/kiali.git@1.56.1-bb.1
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/cluster-auditor.git@1.4.0-bb.10
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/policy.git@3.9.0-bb.2
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/monitoring.git@40.0.0-bb.0
 
     images:
       # base
       - "registry1.dso.mil/ironbank/big-bang/base:2.0.0"
+      - "registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.6"
+      - "registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.24.4"
 
       # istio:
       - "registry1.dso.mil/ironbank/opensource/istio/pilot:1.14.3"
@@ -49,7 +58,6 @@ components:
       - "registry1.dso.mil/ironbank/bigbang/cluster-auditor/opa-exporter:v0.0.4"
 
       # policy (OPA Gatekeeper)
-      - "registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.24.4"
       - "registry1.dso.mil/ironbank/opensource/openpolicyagent/gatekeeper:v3.9.0"
 
       # monitoring:
@@ -63,9 +71,17 @@ components:
       - "registry1.dso.mil/ironbank/opensource/prometheus/node-exporter:v1.3.1"
       - "registry1.dso.mil/ironbank/opensource/prometheus/prometheus:v2.38.0"
 
+  - name: sso
+    description: "Git repositories and OCI images used by PLG"
+    required: false
+    repos:
+      - https://repo1.dso.mil/platform-one/big-bang/apps/security-tools/keycloak.git@18.2.1-bb.3
+    images:
+      - "registry.dso.mil/platform-one/big-bang/apps/security-tools/keycloak/keycloak-ib:18.0.2-1.2.0-1"
+
   - name: logging
     description: "Git repositories and OCI images used by PLG"
-    required: true
+    required: false
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/loki.git
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/promtail.git
@@ -75,3 +91,15 @@ components:
       - "registry1.dso.mil/ironbank/opensource/grafana/promtail:v2.6.1"
       - "registry1.dso.mil/ironbank/opensource/grafana/tempo-query:1.5.0"
       - "registry1.dso.mil/ironbank/opensource/grafana/tempo:1.5.0"
+
+  - name: kyverno
+    description: "Git repositories and OCI images used by Kyverno Policy Engine"
+    required: false
+    repos:
+      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno.git
+      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno-policies.git
+      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno-reporter.git
+    images:
+      - "registry1.dso.mil/ironbank/nirmata/kyverno:v1.7.3"
+      - "registry1.dso.mil/ironbank/nirmata/kyvernopre:v1.7.3"
+
