--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -1,7 +1,9 @@
+domain: bigbang.dev
+
 registryCredentials:
-  registry: "${ZARF_REGISTRY}"
+  registry: "###ZARF_REGISTRY###"
   username: "zarf-pull"
-  password: "${ZARF_REGISTRY_AUTH_PULL}"
+  password: "###ZARF_REGISTRY_AUTH_PULL###"
 
 git:
   existingSecret: "private-git-server"
@@ -13,34 +15,23 @@ networkPolicies:
   nodeCidr: "0.0.0.0/0"
   vpcCidr: "0.0.0.0/0"
 
-# Disabled components
-twistlock:
+metrics-server:
   enabled: false
 
-gatekeeper:
-  enabled: false
-
-logging:
-  enabled: false
-
-eckoperator:
-  enabled: false
-
-fluentbit:
-  enabled: false
-
-# Enabled components
 istio:
   enabled: true
   git:
     repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__core__istio-controlplane.git
-    # istio.ingressGateways.passthrough-ingressgateway and istio.gateways.passthrough
   ingressGateways:
-    passthrough-ingressgateway:
-      type: "LoadBalancer"
     public-ingressgateway:
       type: "LoadBalancer"
       kubernetesResourceSpec:
+        # Uncomment this section if you are on EKS and need to use an Internal Load Balancer instead of the default Classic Load Balancer
+#        serviceAnnotations:
+#          # Use an Internal Load Balancer rather than a public one
+#          service.beta.kubernetes.io/aws-load-balancer-internal: 'true'
+#          # Enable cross zone load balancing
+#          service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
         resources:
           requests:
             cpu: "100m"
@@ -59,25 +50,31 @@ istio:
           memory: "1Gi"
       hpaSpec:
         maxReplicas: 1
+    values:
+      global:
+        proxy:
+          resources:
+            requests:
+              memory: "1Gi"
+            limits:
+              memory: "1Gi"
   gateways:
-    passthrough:
-      ingressGateway: passthrough-ingressgateway
-      hosts:
-        - "*.{{ .Values.domain }}"
-      autoHttpRedirect:
-        enabled: true
-      tls:
-        mode: "PASSTHROUGH"
     public:
       ingressGateway: public-ingressgateway
+      hosts:
+        - gitlab.{{ .Values.domain }}
+        - jenkins.{{ .Values.domain }}
+        - jira.{{ .Values.domain }}
+        - confluence.{{ .Values.domain }}
         - registry.{{ .Values.domain }}
+        - artifactory.{{ .Values.domain }}
 
 istiooperator:
   enabled: true
   git:
     repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__core__istio-operator.git
   values:
-    hub: "${ZARF_REGISTRY}/ironbank/opensource/istio"
+    hub: "###ZARF_REGISTRY###/ironbank/opensource/istio"
     operator:
       resources:
         limits:
@@ -94,7 +91,7 @@ jaeger:
   values:
     istio:
       mtls:
-        mode: PERMISSIVE
+        mode: STRICT
     jaeger:
       spec:
         allInOne:
@@ -163,18 +160,97 @@ clusterAuditor:
         cpu: "500m"
         memory: "512Mi"
 
+gatekeeper:
+  enabled: true
+  git:
+    repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__core__policy.git
+  values:
+    istio:
+      mtls:
+        mode: PERMISSIVE
+    controllerManager:
+      resources:
+        limits:
+          cpu: "2"
+          memory: "4Gi"
+        requests:
+          cpu: "250m"
+          memory: "1Gi"
+    audit:
+      resources:
+        limits:
+          cpu: "2"
+          memory: "4Gi"
+        requests:
+          cpu: "250m"
+          memory: "1Gi"
+    violations:
+      allowedDockerRegistries:
+        match:
+          # Make Kind/K3d happy
+          excludedNamespaces:
+            - "kube-sytem"
+            - "istio-system"
+            - "local-path-storage"
+        parameters:
+          repos:
+            - "###ZARF_REGISTRY###"
+          excludedResources:
+            # K3s needs this if you are doing K3s-specific "HelmRelease"-type CRDs
+            - ".*/helm-install-.*"
+            - ".*/helm"
+      allowedHostFilesystem:
+        match:
+          # Make Kind/K3d happy
+          excludedNamespaces:
+            - "kube-sytem"
+            - "local-path-storage"
+      hostNetworking:
+        match:
+          excludedNamespaces:
+            - "kube-system"
+            - "istio-system"
+      restrictedTaint:
+        match:
+          # Make Kind/K3d happy
+          excludedNamespaces:
+            - "kube-sytem"
+            - "local-path-storage"
+      volumeTypes:
+        match:
+          # Make Kind/K3d happy
+          excludedNamespaces:
+            - "kube-sytem"
+            - "local-path-storage"
+
+logging:
+  enabled: false
+
+eckoperator:
+  enabled: false
+
+fluentbit:
+  enabled: false
+
 loki:
   enabled: true
   git:
     repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__sandbox__loki.git
-  strategy: "monolith"
+  strategy: "scalable"
   objectStorage:
     endpoint: minio.minio.svc.cluster.local
-    region: "us-east-1"
+    region: "minio"
     # accessKey: "" -- Added in environment-bb/values.yaml
     # accessSecret: "" -- Added in environment-bb/values.yaml
-    bucketNames: "loki-logs"
+    bucketNames:
+      chunks: loki-logs
+      ruler: loki-ruler
+      admin: loki-admin
   values:
+    read:
+      replicas: 1
+    write:
+      replicas: 1
     minio:
       enabled: false
     istio:
@@ -305,6 +381,10 @@ monitoring:
             cpu: "100m"
             memory: "2Gi"
 
+twistlock:
+  # Disabling Twistlock for now since Big Bang now needs a license to be specified for Twistlock to initialize successfully. Will re-evaluate turning it back on later, or possibly swap it out for Neuvector once that becomes available.
+  enabled: false
+
 addons:
   minioOperator:
     enabled: true
@@ -324,7 +404,7 @@ addons:
         enabled: true
         mtls:
           mode: PERMISSIVE
- 
+
   minio:
     enabled: true
     git:
@@ -334,21 +414,104 @@ addons:
         mtls:
           mode: PERMISSIVE
       # https://github.com/minio/operator/blob/master/docs/crd.adoc
-      tenant:
+      tenants:
         # Required to be here due to a weird quirk in bucket creation. See https://github.com/minio/operator/issues/1002#issuecomment-1028394242
         users:
           - name: minio-user-credentials
+        # Pre-create buckets that will be needed for various services that will use MinIO
+        # NOTE: Region is meaningless in this instantiation of MinIO. It's a required field but the value could be just about anything and it would work fine.
         buckets:
+          # velero-backups
+          - name: "velero-backups"
+            region: "minio"
+            objectLock: true
+          # loki-logs
           - name: "loki-logs"
+            region: "minio"
+            objectLock: true
+          - name: "loki-ruler"
+            region: "minio"
+            objectLock: true
+          - name: "loki-admin"
             region: "minio"
             objectLock: true
         pools:
           - servers: 3
             volumesPerServer: 2
             size: 5Gi
- 
+            storageClassName: ""
+            tolerations: {}
+            nodeSelector: {}
+            affinity: {}
+            resources:
+              requests:
+                cpu: 250m
+                memory: 2Gi
+              limits:
+                cpu: 250m
+                memory: 2Gi
+            securityContext:
+              runAsUser: 1001
+              runAsGroup: 1001
+              fsGroup: 1001
+              runAsNonRoot: true
+
+  velero:
+    enabled: false
+    git:
+      repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__cluster-utilities__velero.git
+    plugins:
+      - aws
+    values:
+      initContainers:
+       - name: velero-plugin-for-aws
+         image: registry1.dso.mil/ironbank/opensource/velero/velero-plugin-for-aws:v1.5.0
+         imagePullPolicy: IfNotPresent
+         volumeMounts:
+           - mountPath: /target
+             name: plugins
+         resources:
+           requests:
+             memory: 512Mi
+             cpu: 100m
+           limits:
+             memory: 512Mi
+             cpu: 100m
+      resources:
+        # Demo/PoC values. Adjust for production
+        requests:
+          cpu: 100m
+          memory: 256Mi
+        limits:
+          cpu: 10
+          memory: 512Mi
+      configuration:
+        provider: aws
+        backupStorageLocation:
+          bucket: velero-backups
+          config:
+            region: minio
+            s3ForcePathStyle: "true"
+            s3Url: http://minio.minio.svc.cluster.local:80
+        volumeSnapshotLocation:
+          name: default
+          config:
+            region: minio
+        defaultVolumesToRestic: true
+        defaultResticPruneFrequency: 168h
+      deployRestic: true
+      restic:
+        # Demo/PoC values. Adjust for production
+        resources:
+          requests:
+            cpu: 100m
+            memory: 256Mi
+          limits:
+            cpu: 10
+            memory: 1024Mi
+
   kyverno:
-    enabled: true
+    enabled: false
     git:
       repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__sandbox__keyverno.git
  
@@ -357,5 +520,127 @@ addons:
     git:
       repo: http://zarf-gitea-http.zarf.svc.cluster.local:3000/zarf-git-user/mirror__repo1.dso.mil__platform-one__big-bang__apps__security-tools__keycloak.git
     ingress:
-      key: ""
-      cert: ""
+      # THIS VALUE MUST BE TREATED AS A SECRET! It is unencrypted for example purposes only since the domain *.bigbang.dev has its A record set to "127.0.0.1"
+      # If you customize this cert/key you must encrypt this file with SOPS!
+      key: |
+        -----BEGIN PRIVATE KEY-----
+        MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDi11PO+d0wMyCw
+        dybSAItim52Pp9y+anXonKbkz0srdvmxgnMeCEkwW1dKR7J8uk4fCXgvFRegUQ3R
+        TeEFpA8iej+HVDrhqL4BwUpJqG6cp7GJzt0uLcl1g+mysHxDIlTDweia6EIHRHNT
+        OFUbV48hUpE385XJ7wC0M+rQtMs488YLGAx32HMtPB0sx62HNlhVs5eOpRF9rDU1
+        ECkSy5SLQl9d5BoHpy0DzT7OAf5VLYTflsluu+oJoPBAWJ7UuM2T9sDURZiLIcst
+        y8tJ64BVaxyBB1twpZaHtNsnpAVEJnhlNkhUuegpSbn0I7frGO4VL7D0rNO+nxR4
+        +gfuQS/DAgMBAAECggEAEXcu1sLaSvnEzJGABa9RDBibOxJbprWfundFSlzDluck
+        NoyqvGc662Q9BlUa4wudNDqQbF+dYBSdkb4DU2HcYHU1KwBLQFCzwILXa3Byg9FN
+        lCS/VuzjlA7CEaYRC0I7cI8fj73OR6z3jDLMKrzFInWvBLXWlKO4VCejLsqc0xec
+        zV08jHXkQdvLk8bF0w3+Cg4KU0XHcC2r7NwMZClFz1uVEbP22oyxOYDCOh4XpSJ8
+        m7oi2J3HsEwAefxhOh4gHqGgQ7yCMn2LEvxjtMfqUQlesrTOVCLar/V4TXgGzKQy
+        ht8z4be1HpY7pIeZswaIoE+ND5QWsx4Y87ear6L6sQKBgQD0DWFJhyrUJyfQWRkJ
+        C9AcYoU6GAVDNuNLX6IfOYu8nY01oEhq2VKTV2VXgqPQbrzDGWWAReHXlQ7DJlYM
+        9X3Kf7sutZKGDNKxhf6l+NkXFEPmrH579tW5OX9RvvAUttQupWI5+DnBP3Y2YK8N
+        zL3WNTGFfmKgiEjyuOHd175Z/wKBgQDt8j8JEaHqhwpij/x80T/TB/pLIf7x/q/y
+        iGsIUOU8PzdSqvzCbvzX3M5l+0trh5AFiv/xqEMTD2yyH/P/oi43F8wDfYgNxnb/
+        pzhCYNGEtCFwrUrTDJLxWshybhBcrnNOkML4s8hai37HHS8l+jjQtEB1k6gk2CKV
+        VIL8+U5CPQKBgCd3OnJPf2eLZW7V2ayS0nakn/LDC6bQ63S25Fq0TZqUx88SOmO8
+        /ROCoIrEP4VnQvMx2i4iHuFj410/h87UrCDhAv4MssMms7OtfX6NfV20Ez7sSg/1
+        3J31ZFdtzxkqb6mTaQ0CzSQpBQ7KF8TdhR1swLNbustG/rTxnOTpDIk1AoGAeqGO
+        uy3LNQPD5mguyGVPb4N9C5vJuQ55v5VvFCoc+p/Z81EMU2jABsBV31lT1WdYYoLw
+        xariZsBcVLEDH4yGJP6utl3L8M2IJtoXtJ4RXUM4uMmW9o5UbO9MvyzaYenGo4cX
+        9PUzHPcnr5bq5be/8E/1qKMg1VxO9odHuvkBzEECgYBxf3cHALzLMHlI8UrHJxBV
+        GW5/MH6cS25TUiirUfkizrzN/lcq8D+cvN1fl/re6PTBGGIypFruYKG+fbFe4ywD
+        Oxcg92fpmpd30+bPGBGeNcbJCRKn8kewLw3chaW00xXPNzPdThma4lXmMw2ccn+9
+        JX1gNaw1TrEw7Z7WG6po0w==
+        -----END PRIVATE KEY-----
+      cert: |
+        -----BEGIN CERTIFICATE-----
+        MIIFITCCBAmgAwIBAgISBOqTTu6mfJsB0DubbQJn2QjsMA0GCSqGSIb3DQEBCwUA
+        MDIxCzAJBgNVBAYTAlVTMRYwFAYDVQQKEw1MZXQncyBFbmNyeXB0MQswCQYDVQQD
+        EwJSMzAeFw0yMjA4MjkxNjQ5MjNaFw0yMjExMjcxNjQ5MjJaMBgxFjAUBgNVBAMM
+        DSouYmlnYmFuZy5kZXYwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDi
+        11PO+d0wMyCwdybSAItim52Pp9y+anXonKbkz0srdvmxgnMeCEkwW1dKR7J8uk4f
+        CXgvFRegUQ3RTeEFpA8iej+HVDrhqL4BwUpJqG6cp7GJzt0uLcl1g+mysHxDIlTD
+        weia6EIHRHNTOFUbV48hUpE385XJ7wC0M+rQtMs488YLGAx32HMtPB0sx62HNlhV
+        s5eOpRF9rDU1ECkSy5SLQl9d5BoHpy0DzT7OAf5VLYTflsluu+oJoPBAWJ7UuM2T
+        9sDURZiLIcsty8tJ64BVaxyBB1twpZaHtNsnpAVEJnhlNkhUuegpSbn0I7frGO4V
+        L7D0rNO+nxR4+gfuQS/DAgMBAAGjggJJMIICRTAOBgNVHQ8BAf8EBAMCBaAwHQYD
+        VR0lBBYwFAYIKwYBBQUHAwEGCCsGAQUFBwMCMAwGA1UdEwEB/wQCMAAwHQYDVR0O
+        BBYEFNlLXE832dJ+ZhX/MkmPN+AuAJF5MB8GA1UdIwQYMBaAFBQusxe3WFbLrlAJ
+        QOYfr52LFMLGMFUGCCsGAQUFBwEBBEkwRzAhBggrBgEFBQcwAYYVaHR0cDovL3Iz
+        Lm8ubGVuY3Iub3JnMCIGCCsGAQUFBzAChhZodHRwOi8vcjMuaS5sZW5jci5vcmcv
+        MBgGA1UdEQQRMA+CDSouYmlnYmFuZy5kZXYwTAYDVR0gBEUwQzAIBgZngQwBAgEw
+        NwYLKwYBBAGC3xMBAQEwKDAmBggrBgEFBQcCARYaaHR0cDovL2Nwcy5sZXRzZW5j
+        cnlwdC5vcmcwggEFBgorBgEEAdZ5AgQCBIH2BIHzAPEAdgDfpV6raIJPH2yt7rhf
+        Tj5a6s2iEqRqXo47EsAgRFwqcwAAAYLquOp3AAAEAwBHMEUCIAcmgEoyuM4t+HIS
+        RSapqASjPkVT1iG/3ugK02chKwGxAiEArE9KoLo6ABe5DcdFfaDyo1t3SflO7i++
+        a7EIQuSC4OsAdwApeb7wnjk5IfBWc59jpXflvld9nGAK+PlNXSZcJV3HhAAAAYLq
+        uOpxAAAEAwBIMEYCIQDlNcPhrtVufUQFbVmbH2NZI+CH/A8kpN0qh5WEdjgxtgIh
+        AO01onmwsa58aOU2B5bW8zqKpKjyX+VfWwcJrn6SJmRgMA0GCSqGSIb3DQEBCwUA
+        A4IBAQCBMZGzYRAonKxvfOB7hNjqk4avTdT9VkBr3JsU0iiQEzDQSeNLJMmnA5h/
+        BLNm56BWbApjBeOSShFWd8vG4VuWStrqCgSF87mxX9aY2e8ksHGn/phprubi8bmM
+        E5c1hTDcyStjeCMYuTSiT2bt+GSRcdCrmugr67/4KZLudYERDAQCcX29cOxQyoTC
+        EY4w5Cg7nc4s+OEZzApWfnP+LKiZIkhEzUAzjjP5WmoQm3SBx66CzQzlZkpBz6X6
+        0+ek8aDPnlLKoNV746HLLkt2DXaQp0LrjQClSAP9wHd59wa9Q69E1HdRhzHTN6vv
+        N8tuJf44B6CBLXsOTn3ihLneDWva
+        -----END CERTIFICATE-----
+        -----BEGIN CERTIFICATE-----
+        MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
+        TzELMAkGA1UEBhMCVVMxKTAnBgNVBAoTIEludGVybmV0IFNlY3VyaXR5IFJlc2Vh
+        cmNoIEdyb3VwMRUwEwYDVQQDEwxJU1JHIFJvb3QgWDEwHhcNMjAwOTA0MDAwMDAw
+        WhcNMjUwOTE1MTYwMDAwWjAyMQswCQYDVQQGEwJVUzEWMBQGA1UEChMNTGV0J3Mg
+        RW5jcnlwdDELMAkGA1UEAxMCUjMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEK
+        AoIBAQC7AhUozPaglNMPEuyNVZLD+ILxmaZ6QoinXSaqtSu5xUyxr45r+XXIo9cP
+        R5QUVTVXjJ6oojkZ9YI8QqlObvU7wy7bjcCwXPNZOOftz2nwWgsbvsCUJCWH+jdx
+        sxPnHKzhm+/b5DtFUkWWqcFTzjTIUu61ru2P3mBw4qVUq7ZtDpelQDRrK9O8Zutm
+        NHz6a4uPVymZ+DAXXbpyb/uBxa3Shlg9F8fnCbvxK/eG3MHacV3URuPMrSXBiLxg
+        Z3Vms/EY96Jc5lP/Ooi2R6X/ExjqmAl3P51T+c8B5fWmcBcUr2Ok/5mzk53cU6cG
+        /kiFHaFpriV1uxPMUgP17VGhi9sVAgMBAAGjggEIMIIBBDAOBgNVHQ8BAf8EBAMC
+        AYYwHQYDVR0lBBYwFAYIKwYBBQUHAwIGCCsGAQUFBwMBMBIGA1UdEwEB/wQIMAYB
+        Af8CAQAwHQYDVR0OBBYEFBQusxe3WFbLrlAJQOYfr52LFMLGMB8GA1UdIwQYMBaA
+        FHm0WeZ7tuXkAXOACIjIGlj26ZtuMDIGCCsGAQUFBwEBBCYwJDAiBggrBgEFBQcw
+        AoYWaHR0cDovL3gxLmkubGVuY3Iub3JnLzAnBgNVHR8EIDAeMBygGqAYhhZodHRw
+        Oi8veDEuYy5sZW5jci5vcmcvMCIGA1UdIAQbMBkwCAYGZ4EMAQIBMA0GCysGAQQB
+        gt8TAQEBMA0GCSqGSIb3DQEBCwUAA4ICAQCFyk5HPqP3hUSFvNVneLKYY611TR6W
+        PTNlclQtgaDqw+34IL9fzLdwALduO/ZelN7kIJ+m74uyA+eitRY8kc607TkC53wl
+        ikfmZW4/RvTZ8M6UK+5UzhK8jCdLuMGYL6KvzXGRSgi3yLgjewQtCPkIVz6D2QQz
+        CkcheAmCJ8MqyJu5zlzyZMjAvnnAT45tRAxekrsu94sQ4egdRCnbWSDtY7kh+BIm
+        lJNXoB1lBMEKIq4QDUOXoRgffuDghje1WrG9ML+Hbisq/yFOGwXD9RiX8F6sw6W4
+        avAuvDszue5L3sz85K+EC4Y/wFVDNvZo4TYXao6Z0f+lQKc0t8DQYzk1OXVu8rp2
+        yJMC6alLbBfODALZvYH7n7do1AZls4I9d1P4jnkDrQoxB3UqQ9hVl3LEKQ73xF1O
+        yK5GhDDX8oVfGKF5u+decIsH4YaTw7mP3GFxJSqv3+0lUFJoi5Lc5da149p90Ids
+        hCExroL1+7mryIkXPeFM5TgO9r0rvZaBFOvV2z0gp35Z0+L4WPlbuEjN/lxPFin+
+        HlUjr8gRsI3qfJOQFy/9rKIJR0Y/8Omwt/8oTWgy1mdeHmmjk7j1nYsvC9JSQ6Zv
+        MldlTTKB3zhThV1+XWYp6rjd5JW1zbVWEkLNxE7GJThEUG3szgBVGP7pSWTUTsqX
+        nLRbwHOoq7hHwg==
+        -----END CERTIFICATE-----
+        -----BEGIN CERTIFICATE-----
+        MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
+        MSQwIgYDVQQKExtEaWdpdGFsIFNpZ25hdHVyZSBUcnVzdCBDby4xFzAVBgNVBAMT
+        DkRTVCBSb290IENBIFgzMB4XDTIxMDEyMDE5MTQwM1oXDTI0MDkzMDE4MTQwM1ow
+        TzELMAkGA1UEBhMCVVMxKTAnBgNVBAoTIEludGVybmV0IFNlY3VyaXR5IFJlc2Vh
+        cmNoIEdyb3VwMRUwEwYDVQQDEwxJU1JHIFJvb3QgWDEwggIiMA0GCSqGSIb3DQEB
+        AQUAA4ICDwAwggIKAoICAQCt6CRz9BQ385ueK1coHIe+3LffOJCMbjzmV6B493XC
+        ov71am72AE8o295ohmxEk7axY/0UEmu/H9LqMZshftEzPLpI9d1537O4/xLxIZpL
+        wYqGcWlKZmZsj348cL+tKSIG8+TA5oCu4kuPt5l+lAOf00eXfJlII1PoOK5PCm+D
+        LtFJV4yAdLbaL9A4jXsDcCEbdfIwPPqPrt3aY6vrFk/CjhFLfs8L6P+1dy70sntK
+        4EwSJQxwjQMpoOFTJOwT2e4ZvxCzSow/iaNhUd6shweU9GNx7C7ib1uYgeGJXDR5
+        bHbvO5BieebbpJovJsXQEOEO3tkQjhb7t/eo98flAgeYjzYIlefiN5YNNnWe+w5y
+        sR2bvAP5SQXYgd0FtCrWQemsAXaVCg/Y39W9Eh81LygXbNKYwagJZHduRze6zqxZ
+        Xmidf3LWicUGQSk+WT7dJvUkyRGnWqNMQB9GoZm1pzpRboY7nn1ypxIFeFntPlF4
+        FQsDj43QLwWyPntKHEtzBRL8xurgUBN8Q5N0s8p0544fAQjQMNRbcTa0B7rBMDBc
+        SLeCO5imfWCKoqMpgsy6vYMEG6KDA0Gh1gXxG8K28Kh8hjtGqEgqiNx2mna/H2ql
+        PRmP6zjzZN7IKw0KKP/32+IVQtQi0Cdd4Xn+GOdwiK1O5tmLOsbdJ1Fu/7xk9TND
+        TwIDAQABo4IBRjCCAUIwDwYDVR0TAQH/BAUwAwEB/zAOBgNVHQ8BAf8EBAMCAQYw
+        SwYIKwYBBQUHAQEEPzA9MDsGCCsGAQUFBzAChi9odHRwOi8vYXBwcy5pZGVudHJ1
+        c3QuY29tL3Jvb3RzL2RzdHJvb3RjYXgzLnA3YzAfBgNVHSMEGDAWgBTEp7Gkeyxx
+        +tvhS5B1/8QVYIWJEDBUBgNVHSAETTBLMAgGBmeBDAECATA/BgsrBgEEAYLfEwEB
+        ATAwMC4GCCsGAQUFBwIBFiJodHRwOi8vY3BzLnJvb3QteDEubGV0c2VuY3J5cHQu
+        b3JnMDwGA1UdHwQ1MDMwMaAvoC2GK2h0dHA6Ly9jcmwuaWRlbnRydXN0LmNvbS9E
+        U1RST09UQ0FYM0NSTC5jcmwwHQYDVR0OBBYEFHm0WeZ7tuXkAXOACIjIGlj26Ztu
+        MA0GCSqGSIb3DQEBCwUAA4IBAQAKcwBslm7/DlLQrt2M51oGrS+o44+/yQoDFVDC
+        5WxCu2+b9LRPwkSICHXM6webFGJueN7sJ7o5XPWioW5WlHAQU7G75K/QosMrAdSW
+        9MUgNTP52GE24HGNtLi1qoJFlcDyqSMo59ahy2cI2qBDLKobkx/J3vWraV0T9VuG
+        WCLKTVXkcGdtwlfFRjlBz4pYg1htmf5X6DYO8A4jqv2Il9DjXA6USbW1FzXSLr9O
+        he8Y4IWS6wY7bCkjCWDcRQJMEhg76fsO3txE+FiYruq9RUWhiF1myv4Q6W+CyBFC
+        Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
+        -----END CERTIFICATE-----
+
