--- a/zarf.yaml
+++ b/zarf.yaml
@@ -34,6 +34,7 @@ components:
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/kiali.git@1.56.1-bb.1
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/cluster-auditor.git@1.4.0-bb.10
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/policy.git@3.9.0-bb.2
+
     images:
       - "registry1.dso.mil/ironbank/big-bang/base:2.0.0"
       - "registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.6"
@@ -54,6 +55,17 @@ components:
       - "registry1.dso.mil/ironbank/bigbang/cluster-auditor/opa-exporter:v0.0.4"
       - "registry1.dso.mil/ironbank/opensource/openpolicyagent/gatekeeper:v3.9.0"
 
+  - name: minio
+    description: "Git repositories and OCI images used by Minio"
+    required: true
+    repos:
+      - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio-operator.git@4.4.28-bb.1
+      - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio.git@4.4.28-bb.1
+    images:
+      - "registry1.dso.mil/ironbank/opensource/minio/operator:v4.4.28"
+      - "registry1.dso.mil/ironbank/opensource/minio/console:v0.20.0"
+      - "registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-08-26T19-53-15Z"
+
   - name: keycloak
     description: "Git repositories and OCI images used by Keycloak"
     required: true
@@ -62,9 +74,9 @@ components:
     images:
       - "registry.dso.mil/platform-one/big-bang/apps/security-tools/keycloak/keycloak-ib:18.0.2-1.2.0-1"
 
-  - name: log-eck
+  - name: monitoring
     description: "Git repositories and OCI images used by PLG"
-    required: false
+    required: true
     repos:
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/monitoring.git@40.0.0-bb.0
     images:
@@ -104,7 +116,8 @@ components:
 
   - name: big-bang-custom
     description: "Deploy a custom version of Big Bang Core using Keyverno and Keycloak"
-    group: big-bang-variant
+      #group: big-bang-variant
+    required: true
     manifests:
       - name: big-bang-config
         kustomizations:
