--- a/zarf.yaml
+++ b/zarf.yaml
@@ -3,7 +3,7 @@ kind: ZarfPackageConfig
 metadata:
   name: big-bang
   description: "Deploy Big Bang Core"
-  version: 1.43.0
+  version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
   url: https://p1.dso.mil/products/big-bang
   image: https://p1.dso.mil/img/Big_Bang_Color_Logo_White_text.de14c793.webp
   # Big Bang / Iron Bank are only amd64
@@ -15,43 +15,43 @@ components:
     manifests:
       - name: flux-installer
         kustomizations:
-          - https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base/flux?ref=1.43.0
+          - https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base/flux?ref=###ZARF_PKG_VAR_BIGBANG_VERSION###
     images:
-      - registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.22.2
-      - registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.27.0
-      - registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.25.1
-      - registry1.dso.mil/ironbank/fluxcd/source-controller:v0.26.1
+      - registry1.dso.mil/ironbank/fluxcd/helm-controller:v0.24.0
+      - registry1.dso.mil/ironbank/fluxcd/kustomize-controller:v0.28.0
+      - registry1.dso.mil/ironbank/fluxcd/notification-controller:v0.26.0
+      - registry1.dso.mil/ironbank/fluxcd/source-controller:v0.29.0
 
   - name: big-bang
     description: "Git repositories and OCI images used by Big Bang Core"
     required: true
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/bigbang.git@1.43.0
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-controlplane.git@1.14.3-bb.4
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-operator.git@1.14.3-bb.0
+      - https://repo1.dso.mil/platform-one/big-bang/bigbang.git@###ZARF_PKG_VAR_BIGBANG_VERSION###
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-controlplane.git@1.15.0-bb.0
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/istio-operator.git@1.15.0-bb.0
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/jaeger.git@2.35.0-bb.1
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/kiali.git@1.56.1-bb.1
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/cluster-auditor.git@1.4.0-bb.10
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/policy.git@3.9.0-bb.2
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/cluster-auditor.git@1.5.0-bb.0
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/policy.git@3.9.0-bb.3
       - https://repo1.dso.mil/platform-one/big-bang/apps/core/authservice.git@0.5.2-bb.0
     images:
       - "registry1.dso.mil/ironbank/big-bang/base:2.0.0"
       - "registry1.dso.mil/ironbank/redhat/ubi/ubi8-minimal:8.6"
       - "registry1.dso.mil/ironbank/opensource/kubernetes/kubectl:v1.24.4"
-      - "registry1.dso.mil/ironbank/opensource/istio/pilot:1.14.3"
-      - "registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.14.3"
-      - "registry1.dso.mil/ironbank/opensource/istio/install-cni:1.14.3"
-      - "registry1.dso.mil/ironbank/tetrate/istio/istioctl:1.13.5-tetratefips-v0"
-      - "registry1.dso.mil/ironbank/tetrate/istio/proxyv2:1.13.5-tetratefips-v0"
-      - "registry1.dso.mil/ironbank/tetrate/istio/pilot:1.13.5-tetratefips-v0"
-      - "registry1.dso.mil/ironbank/tetrate/istio/install-cni:1.13.5-tetratefips-v0"
-      - "registry1.dso.mil/ironbank/opensource/istio/operator:1.14.3"
-      - "registry1.dso.mil/ironbank/tetrate/istio/operator:1.13.5-tetratefips-v0"
+      - "registry1.dso.mil/ironbank/opensource/istio/pilot:1.15.0"
+      - "registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.15.0"
+      - "registry1.dso.mil/ironbank/opensource/istio/install-cni:1.15.0"
+      - "registry1.dso.mil/ironbank/opensource/istio/operator:1.15.0"
+      - "registry1.dso.mil/ironbank/tetrate/istio/istioctl:1.14.3-tetratefips-v0"
+      - "registry1.dso.mil/ironbank/tetrate/istio/proxyv2:1.14.3-tetratefips-v0"
+      - "registry1.dso.mil/ironbank/tetrate/istio/pilot:1.14.3-tetratefips-v0"
+      - "registry1.dso.mil/ironbank/tetrate/istio/install-cni:1.14.3-tetratefips-v0"
+      - "registry1.dso.mil/ironbank/tetrate/istio/operator:1.14.3-tetratefips-v0"
       - "registry1.dso.mil/ironbank/opensource/jaegertracing/all-in-one:1.37.0"
       - "registry1.dso.mil/ironbank/opensource/jaegertracing/jaeger-operator:1.37.0"
       - "registry1.dso.mil/ironbank/opensource/kiali/kiali-operator:v1.56.1"
       - "registry1.dso.mil/ironbank/opensource/kiali/kiali:v1.56.1"
-      - "registry1.dso.mil/ironbank/bigbang/cluster-auditor/opa-exporter:v0.0.4"
+      - "registry1.dso.mil/ironbank/bigbang/cluster-auditor/opa-exporter:v0.0.7"
       - "registry1.dso.mil/ironbank/opensource/openpolicyagent/gatekeeper:v3.9.0"
       - "registry1.dso.mil/ironbank/bitnami/redis:7.0.0-debian-10-r3"
       - "registry1.dso.mil/ironbank/istio-ecosystem/authservice:0.5.2"
@@ -60,7 +60,7 @@ components:
     description: "Git repositories and OCI images used by Minio"
     required: true
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio-operator.git@4.4.28-bb.1
+      - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio-operator.git@4.4.28-bb.2
       - https://repo1.dso.mil/platform-one/big-bang/apps/application-utilities/minio.git@4.4.28-bb.1
     images:
       - "registry1.dso.mil/ironbank/opensource/minio/operator:v4.4.28"
@@ -71,7 +71,7 @@ components:
     description: "Git repositories and OCI images used by Keycloak"
     required: true
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/apps/security-tools/keycloak.git@18.2.1-bb.3
+      - https://repo1.dso.mil/platform-one/big-bang/apps/security-tools/keycloak.git@18.2.1-bb.4
     images:
       - "registry.dso.mil/platform-one/big-bang/apps/security-tools/keycloak/keycloak-ib:18.0.2-1.2.0-1"
       - "registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.11"
@@ -80,7 +80,7 @@ components:
     description: "Git repositories and OCI images used by PLG"
     required: true
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/apps/core/monitoring.git@40.0.0-bb.0
+      - https://repo1.dso.mil/platform-one/big-bang/apps/core/monitoring.git@40.0.0-bb.1
     images:
       - "registry1.dso.mil/ironbank/big-bang/grafana/grafana-plugins:9.1.3"
       - "registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar:1.19.4"
@@ -109,7 +109,7 @@ components:
     description: "Git repositories and OCI images used by Kyverno Policy Engine"
     required: true
     repos:
-      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno.git@2.5.3-bb.0
+      - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno.git@2.5.4-bb.0
       - https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/kyverno-policies.git@1.0.1-bb.5
     images:
       - "registry1.dso.mil/ironbank/nirmata/kyverno:v1.7.3"
