Update BB to 1.45.0

--- a/manifests/big-bang.yaml
+++ b/manifests/big-bang.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m
-  path: "./kustomizations/bigbang"
+  path: "./kustomizations"
   prune: true
   sourceRef:
     kind: GitRepository
