--- a/kustomizations/kustomization.yaml
+++ b/kustomizations/kustomization.yaml
@@ -1,5 +1,5 @@
-bases:
-  - git::https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base?ref=tags/1.43.0
+resources:
+  - git::https://repo1.dso.mil/platform-one/big-bang/bigbang.git/base?ref=tags/1.45.0
 
 configMapGenerator:
   - name: common
