--- a/manifests/big-bang.yaml
+++ b/manifests/big-bang.yaml
@@ -18,11 +18,15 @@ spec:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       namespace: bigbang
+      name: istio-operator
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      namespace: bigbang
       name: istio
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       namespace: bigbang
-      name: istio-operator
+      name: kyverno
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       namespace: bigbang
@@ -51,14 +55,6 @@ spec:
       kind: HelmRelease
       namespace: bigbang
       name: minio-operator
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-      kind: HelmRelease
-      namespace: bigbang
-      name: gitlab
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-      kind: HelmRelease
-      namespace: bigbang
-      name: gitlab-runner
   timeout: 15m
   postBuild:
     substitute:
